# velox

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test-prompts.md
examples/: basic_usage.py
tests/: test_e2e.py  test_masking.py
velox/: __init__.py  _masking.py  _scanner.py  _telemetry.py  charts.py
