[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velox"
version = "0.1.0"
description = "Fast, lightweight data utilities for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
